bg overflow fixed

--- a/less/style.less
+++ b/less/style.less
@@ -55,13 +55,12 @@ button:focus {
     }
 
   .wrap {
-    max-width: 100%;
     padding: 0;
   }
 
   .desktop--01,
   .desktop--02 {
-    min-width: 321px;
+    min-width: 320px;
     padding: 0;
     background-color: transparent;
     background-image: none;
@@ -72,8 +71,12 @@ button:focus {
 
 @media screen and (max-width: 540px) {
 
+
+  html {
+    min-width: 320px;
+  }
+
   body {
-    background-size: 100%;
     background: linear-gradient(135deg, #f52853 15%,#f57829 50%,#f52853 70%,#f57829 100%,#f57829 100%);
   }
 
